internal/xds/translator/testdata/out/xds-ir/cors.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.cors:
          '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
          allowCredentials: true
          allowHeaders: x-header-1, x-header-2
          allowMethods: '*'
          allowOriginStringMatch:
          - safeRegex:
              regex: '*.example.com'
          - exact: foo.bar.com
          - safeRegex:
              regex: https://preview-[0-9]+\.example\.com(:8443)?
          exposeHeaders: x-header-3, x-header-4
          forwardNotMatchingPreflights: false
          maxAge: "1000"
